# Apache_Spark

./: Missing_data.py  README.md  Spark_dataframe_basics.py  pyproject.toml
Apache_Spark_Dataframe_exercises/: DataFrame_Basic_Operations.ipynb  Groupby_&_Aggregate_Operations.py
Apache_Spark_Dataframe_exercises/.ipynb_checkpoints/: DataFrame_Basic_Operations-checkpoint.ipynb  Missing_Data-checkpoint.ipynb
Apache_Spark_Dataframe_exercises/Spark_DataFrames_Exercises/: Spark DataFrames Project Exercise.py
BigDataArch/AWS_Deequ/: Session_27-04
Big_Data_Integration_and_Processing_exercises/: W4_hands_on_Spark.py  W5_Analyzing Sensor Data with Spark Streaming.py  W5_SparkSQL and Spark DataFrames.py  adclicks.csv
Big_Data_Integration_and_Processing_exercises/week_6/: Querying_and_Exporting_from_MongoDB.ipynb  SoccerTweetAnalysis.ipynb  query_03.csv  query_04.csv  query_05.csv  query_2.csv  twitter.csv  twitter_word_count_output.csv
Big_Data_Integration_and_Processing_exercises/words_output_1.txt/: .part-00000.crc
Big_Data_Specialization/3.Big_Data_Integration_and_Processing/: W4_hands_on_Spark.py  W5_Analyzing Sensor Data with Spark Streaming_2.py
Big_Data_Specialization/4.Machine_Learning_With_Big_Data/: .~lock.minute_weather.csv#  W2_Data_Exploration_Spark.py  clustering.ipynb  (+4 more)
Machine_Learning_With_Big_Data/: W3_Classification_Spark.py
Practice/:  Dates_&_Timestamps.py  Spark DataFrames Project Exercise.ipynb  Spark_dataframe_basic_operations.py
Python_Crash_Course/: Python Crash Course Exercises.ipynb
Spark Streaming/: Local_Streaming_Example.py
(+559 files in other folders)
