[tool.poetry]
name = "apache-spark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apache_spark"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"
numpy = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

